<resources>
    <string name="app_name">NDPSongs_L09</string>
    <string name="song_titlle">Song Titlle</string>
    <string name="enter_song_title_here">Enter song title here</string>
    <string name="singers">Singers</string>
    <string name="enter_singers_name_here">Enter singers name here</string>
    <string name="enter_year_of_release_here">Enter year of release here</string>
    <string name="year">Year</string>
    <string name="stars">Stars</string>
    <string name="insert">Insert</string>
    <string name="show_list">Show List</string>
</resources>