<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/song_titlle"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_song_title_here"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/tvSingers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/singers"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/etSingers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_singers_name_here"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/tvYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/year"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/etYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_year_of_release_here"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/tvStar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stars"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginTop="10dp"/>

    <RadioGroup
        android:id="@+id/rgStar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rgStar1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1" />

        <RadioButton
            android:id="@+id/rgStar2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2" />

        <RadioButton
            android:id="@+id/rgStar3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3" />

        <RadioButton
            android:id="@+id/rgStar4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="4" />

        <RadioButton
            android:id="@+id/rgStar5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="5" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/btnInsert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/insert"
            app:backgroundTint="@android:color/darker_gray" />

        <Button
            android:id="@+id/btnShow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/show_list"
            app:backgroundTint="@android:color/darker_gray" />
    </LinearLayout>

</LinearLayout>